--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <h1> Test of first index.html page in github </h1>
 
-  <h2> Thanks World! </h2>
+  <h2> Thanks World! 
+  I got up to here
+  with effort and determination.
+  
+  Let's keep on improving!!!
+  Thanks World again!</h2>
   
 </html>
