--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <h1> Test of first index.html page in github </h1>
 
-  <h2> Thanks World! 
+  Thanks World!
+  
   I got up to here
   with effort and determination.
   
   Let's keep on improving!!!
-  Thanks World again!</h2>
+  Thanks World again!
+  
+  By: Alejandro Figueroa Nazara - 18.August.2019
   
 </html>
