--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <html>
 <h1> Test of first index.html page in github </h1>
-
-  Thanks World!
-  
-  I got up to here
-  with effort and determination.
-  
-  Let's keep on improving!!!
-  Thanks World again!
-  
-  By: Alejandro Figueroa Nazara - 18.August.2019
-  
+  <p>Thanks World!</p>
+  <p>I got up to here</p>
+  <p>with effort and determination.</p>
+  <p>Let's keep on improving!!!</p>
+  <p>Thanks World again!</p>
+  <p>By: Alejandro Figueroa Nazara - 18.August.2019</p>
 </html>
